welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:3: error: '=' expected but ';' found.
var resteAC==a%c
^lastDigit:4: error: '=' expected but ';' found.
var resteBC== b%c
^lastDigit:6: error: '=' expected but ';' found.
	if ((resteAB == resteAC || resteAB == resteBC) && resteBC == resteAC) return true
^